fix: disable touch actions on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@ html, body, #root {
 body {
     margin: 0;
 }
+
+#root {
+    touch-action: none;
+}
